# nimo-gui-streamlit

./: README.md
nimo-gui-1.1.2/: pyproject.toml  requirements.txt
nimo-gui-1.1.2/nimo_gui/: __init__.py  algorithm_options.py  app.py  constants.py  state.py
nimo-gui-1.1.2/nimo_gui/backend/: __init__.py  parameters.py  queuestream.py  worker.py
nimo-gui-1.1.2/nimo_gui/view/: __init__.py  dialogs.py  mainpage.py
nimo-gui-1.1.2/nimo_gui/view/components/: __init__.py  button.py  filebrowser.py  number_input.py  selectbox.py  text_input.py
nimo-gui-1.1.2/nimo_gui/visualization/: plot_distribution.py  plot_history.py  plot_phase_diagram.py
