[tool.poetry]
name = "nimo_gui"
version = "1.1.2"
description = ""
authors = ["nimo_gui <nimo_gui@example.com>"]
packages = [{include = "nimo_gui"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
streamlit = "1.37"
nimo = "1.0.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"
commitizen = "^3.6.0"
pylint = "^2.17.5"
pdoc3 = "^0.10.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
